buildscript {
    ext {
        springBootVersion = '3.2.2'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "io.spring.gradle:dependency-management-plugin:1.1.4"
    }
}

subprojects {
    group = 'com.toonpick'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = '17'

    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }

    dependencies {
        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // Testing
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }

    test {
        useJUnitPlatform()
    }
}

project(':module-application') {
    bootJar.enabled = false
}

project(':module-domain') {
    bootJar.enabled = false
    jar.enabled = true
}

project(':module-internal') {
    bootJar.enabled = false
    jar.enabled = true
}

project(':module-common') {
    bootJar.enabled = false
    jar.enabled = true
}
